--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -401,7 +401,7 @@ h1.intro-titulo::after {
   content: "";
   display: inline-block;
   background: #000;
-  width: 80px;
+  width: 30px;
   height: 1px;
   margin: 0 15px;
   box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.75); }
@@ -512,7 +512,7 @@ h1.intro-titulo::after {
   content: "";
   display: inline-block;
   background: #000;
-  width: 80px;
+  width: 30px;
   height: 1px;
   margin: 0 15px;
   box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.75); }
@@ -621,7 +621,7 @@ span.skill-num {
   content: "";
   display: inline-block;
   background: #000;
-  width: 80px;
+  width: 30px;
   height: 1px;
   margin: 0 15px;
   box-shadow: 0 1px 10px 1px rgba(0, 0, 0, 0.75); }
@@ -630,7 +630,7 @@ span.skill-num {
   display: flex;
   height: 65px;
   max-width: 450px;
-  margin: 15px auto;
+  margin: 25px auto 10px;
   align-items: center; }
 
 .controller-option {
